--- a/paquescolar-web/pom.xml
+++ b/paquescolar-web/pom.xml
@@ -12,6 +12,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>paquescolar-ejb</artifactId>
             <version>2.1</version>
@@ -56,6 +61,16 @@
             <version>3.16</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.poi</artifactId>
+            <version>3.14_1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>flying-saucer-pdf</artifactId>
+            <version>9.1.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
@@ -80,6 +95,27 @@
             <artifactId>javamelody-core</artifactId>
             <version>1.54.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-examples</artifactId>
+            <version>3.7</version>
+        </dependency>
+
+        <!--dependency>
+            <groupId>jp.qpg</groupId>
+            <artifactId>Excel-To-PDF-with-POI-and-PDFBox</artifactId>
+            <version>0.4.1</version>
+        </dependency-->
     </dependencies>
 
     <repositories>
@@ -99,6 +135,12 @@
             <name>JBOSS EAP 6.X.X Repository for Maven</name>
             <url>https://maven.repository.redhat.com/techpreview/all</url>
         </repository> 
+        <repository>
+            <id>qpg.jp</id>
+            <name>qpg.jp repository</name>
+            <url>http://qpg.jp/maven</url>
+        </repository>
+        
     </repositories>
     <build>
         <plugins>
