--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -1,6 +1,11 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+
+#Parametros extra de contratos
+aclaracionContrato2019 = Aclaraci\u00f3n de validez del presente contrato: En el caso que el contratante haya celebrado contrataci\u00f3n previa con el contratista para la confecci\u00f3n del primer uniforme correspondiente a la entrega del mismo a\u00f1o, el presente contrato tendr\u00e1 como requisito de validez el cumplimiento de las obligaciones del contratista establecidas en \u00e9l. En caso de incumplimiento por parte del contratista que provoque la extinci\u00f3n del contrato de servicio de confecci\u00f3n del primer uniforme, el presente ser\u00e1 nulo por incumplimiento previo de contrato. Conscientes de la afirmaci\u00f3n anterior las partes acuerdan la suscripci\u00f3n del presente conforme a las cl\u00e1usulas que a continuaci\u00f3n se especifican.
+
+
 Usuario     =Usuario
 Password    =Clave de Acceso
 depa        =Departamento
