--- a/paquescolar-web/pom.xml
+++ b/paquescolar-web/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>javamelody-core</artifactId>
             <version>1.54.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
     <repositories>
