--- a/paquescolar-ejb/pom.xml
+++ b/paquescolar-ejb/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>jasperreports</artifactId>
             <version>5.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 
     <build>
