Seguridad Adición de mantenimiento de opciones de menu

--- a/seguridad/seguridad-web/src/main/resources/Bundle.properties
+++ b/seguridad/seguridad-web/src/main/resources/Bundle.properties
@@ -13,12 +13,26 @@ usr.login       =Login
 usr.pass1       =Clave de acceso
 usr.pass2       =Confirmar clave de acceso
 usr.validarPass =La clave de acceso debe coincidir con la confirmaci\u00f3n de la 
+
+#Labels GruOpcMenu
+gom.aplicaciones        =Aplicaciones
+gom.grupos              =Grupos
+gom.listadoGruAppOpcMenu=Listado de Opciones por Grupo y Aplicaci\u00f3n
+gom.nombreOpcion        =Nombre
+gom.url                 =URL
+gom.opcionPadre               =Opci\u00f3n Padre
+
+#Labels Generales
+gen.seleccionarUnaOpcion =Seleccionar una opci\u00f3n
+gen.id                   =Id
+
 # Botones
 boton.limpiar   =Limpiar
 boton.nuevo     =Nuevo
 boton.guardar   =Guardar
 boton.editar    =Editar
 boton.eliminar  =Eliminar
+boton.agregar   =Agregar
 
 
 #mensajes
