--- a/seguridad/seguridad-web/src/main/resources/Bundle.properties
+++ b/seguridad/seguridad-web/src/main/resources/Bundle.properties
@@ -20,11 +20,21 @@ gom.grupos              =Grupos
 gom.listadoGruAppOpcMenu=Listado de Opciones por Grupo y Aplicaci\u00f3n
 gom.nombreOpcion        =Nombre
 gom.url                 =URL
-gom.opcionPadre               =Opci\u00f3n Padre
+gom.opcionPadre         =Opci\u00f3n Padre
 
 #Labels Generales
 gen.seleccionarUnaOpcion =Seleccionar una opci\u00f3n
 gen.id                   =Id
+gen.agregar              =Agregar
+
+#Labels Aplicaciones
+app.nombre              =Nombre
+app.unidadDuenha        =Unidad Due\u00f1a
+app.admin               =Administrador
+app.estado              =Estado
+app.fechaInicioPro      =Fecha Inicio Producci\u00f3n
+app.listadoModulo       =Listado de Modulos
+app.orden               =Orden
 
 # Botones
 boton.limpiar   =Limpiar
@@ -37,3 +47,4 @@ boton.agregar   =Agregar
 
 #mensajes
 msj.validacionFormulario =Existe un campo o m\u00e1s requerido para esta operaci\u00f3n
+msj.insercion            =Registro(s) almacenado(s) satisfactoriamente
