Seguridad Adición de mantenimiento de opciones de menu

--- a/seguridad/seguridad-web/src/main/resources/Bundle.properties
+++ b/seguridad/seguridad-web/src/main/resources/Bundle.properties
@@ -26,6 +26,7 @@ gom.opcionPadre         =Opci\u00f3n Padre
 gen.seleccionarUnaOpcion =Seleccionar una opci\u00f3n
 gen.id                   =Id
 gen.agregar              =Agregar
+gen.cancelar             =Cancelar
 
 #Labels Aplicaciones
 app.nombre              =Nombre
@@ -35,6 +36,10 @@ app.estado              =Estado
 app.fechaInicioPro      =Fecha Inicio Producci\u00f3n
 app.listadoModulo       =Listado de Modulos
 app.orden               =Orden
+app.modulo              =Modulo
+app.modulo.nombre       =Nombre
+app.modulo.orden        =Orden
+app.opcionMenu.listado  =Listado de opciones de menu
 
 # Botones
 boton.limpiar   =Limpiar
@@ -48,3 +53,4 @@ boton.agregar   =Agregar
 #mensajes
 msj.validacionFormulario =Existe un campo o m\u00e1s requerido para esta operaci\u00f3n
 msj.insercion            =Registro(s) almacenado(s) satisfactoriamente
+msj.error                =A ocurrido un error en la operaci\u00f3n realizada.
