Seguridad Adición de mantenimiento de opciones de menu

--- a/seguridad/seguridad-web/src/main/resources/Bundle.properties
+++ b/seguridad/seguridad-web/src/main/resources/Bundle.properties
@@ -51,6 +51,7 @@ boton.agregar   =Agregar
 
 
 #mensajes
+msj.errorLogin           =Usuario o Clave de Acceso erronea!
 msj.validacionFormulario =Existe un campo o m\u00e1s requerido para esta operaci\u00f3n
 msj.insercion            =Registro(s) almacenado(s) satisfactoriamente
 msj.error                =A ocurrido un error en la operaci\u00f3n realizada.
