--- a/seguridad/seguridad-web/pom.xml
+++ b/seguridad/seguridad-web/pom.xml
@@ -32,6 +32,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-core</artifactId>
+            <version>3.1.1.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
