--- a/seguridad/seguridad-web/src/main/webapp/WEB-INF/web.xml
+++ b/seguridad/seguridad-web/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
+        <welcome-file>app/principal.xhtml</welcome-file>
     </welcome-file-list>
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
@@ -38,11 +38,6 @@
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
     </servlet>
-    
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
@@ -51,7 +46,6 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
-    
     <mime-mapping>
         <extension>ttf</extension>
         <mime-type>application/font-sfnt</mime-type>
@@ -96,13 +90,10 @@
         <extension>svg#fontawesomeregular</extension>
         <mime-type>image/svg+xml</mime-type>
     </mime-mapping>
-    
-    
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>protected pages</web-resource-name>
-            <url-pattern>/app/principal.xhtml</url-pattern>
-            <url-pattern>/app/*</url-pattern>
+            <url-pattern>/*</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
@@ -110,7 +101,9 @@
             <role-name>ADMINISTRADOR</role-name>
         </auth-constraint>
     </security-constraint>
-    
+    <security-role>
+        <role-name>ADMINISTRADOR</role-name>
+    </security-role>
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>allow resources</web-resource-name>
@@ -120,13 +113,9 @@
         </web-resource-collection>
     </security-constraint>
     
-    <security-role>
-        <role-name>ADMINISTRADOR</role-name>
-    </security-role>
-    
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>seguridadv2</realm-name>
+        <realm-name>sd_seguridad</realm-name>
         <form-login-config>
             <form-login-page>/login.xhtml</form-login-page>
             <form-error-page>/error.xhtml</form-error-page>
