--- a/votacion/votacion-web/pom.xml
+++ b/votacion/votacion-web/pom.xml
@@ -21,10 +21,26 @@
     
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>votacion-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>7.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>paradise-theme</groupId>
+            <artifactId>paradise-theme</artifactId>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 
