--- a/votacion/votacion-web/pom.xml
+++ b/votacion/votacion-web/pom.xml
@@ -22,6 +22,11 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>votacion-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>votacion-model</artifactId>
             <version>${project.version}</version>
         </dependency>
