--- a/votacion/votacion-model/pom.xml
+++ b/votacion/votacion-model/pom.xml
@@ -10,26 +10,27 @@
     <packaging>jar</packaging>
     <repositories>
         <repository>
-            <id>unknown-jars-temp-repo</id>
-            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
-            <url>file:${project.basedir}/lib</url>
+            <id>maven.repository.redhat.com</id>
+            <name>JBOSS EAP 6.X.X Repository for Maven</name>
+            <url>https://maven.repository.redhat.com/techpreview/all</url>
+        </repository> 
+        <repository>
+            <url>http://download.eclipse.org/rt/eclipselink/maven.repo/</url>
+            <id>eclipselink</id>
+            <layout>default</layout>
+            <name>Repository for library EclipseLink (JPA 2.0)</name>
         </repository>
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>eclipselink-2.3.2</artifactId>
-            <version>SNAPSHOT</version>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>javax.persistence-2.0.3</artifactId>
-            <version>SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>unknown.binary</groupId>
-            <artifactId>org.eclipse.persistence.jpa.jpql_1.0.1</artifactId>
-            <version>SNAPSHOT</version>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.0.3</version>
         </dependency>
     </dependencies>
     <properties>
