Cambios en menu

--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -42,6 +42,8 @@ tabla.municipio     =Municipio
 tabla.monto         =Monto Contratado
 tabla.monto$        =Monto ($)
 tabla.cantidad      =Cantidad Contratada
+tabla.cantidadLibros=Cantidad Libros
+tabla.rubro         =Rubro
 
 
 #Campos para fecha
