--- a/paquescolar-model/pom.xml
+++ b/paquescolar-model/pom.xml
@@ -20,14 +20,33 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            
+            <plugin>  
+                <groupId>au.com.alderaan</groupId>  
+                <artifactId>eclipselink-staticweave-maven-plugin</artifactId>  
+                <version>1.0.3</version>  
+                <executions>  
+                    <execution>  
+                        <phase>process-classes</phase>  
+                        <goals>  
+                            <goal>weave</goal>  
+                        </goals>  
+                        <configuration>  
+                            <logLevel>ALL</logLevel>  
+                        </configuration>
+                    </execution>  
+                </executions>  
+                <dependencies>  
+                    <dependency>  
+                        <groupId>org.eclipse.persistence</groupId>  
+                        <artifactId>eclipselink</artifactId>  
+                        <version>2.5.2</version>  
+                    </dependency>  
+                </dependencies>  
+            </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>EclipseLink</id>
-            <url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
-        </repository>
-    </repositories>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -42,7 +61,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.7.4</version>
+            <version>2.7.0</version>
         </dependency>
     </dependencies>
 </project>
