--- a/paquescolar-model/pom.xml
+++ b/paquescolar-model/pom.xml
@@ -63,5 +63,11 @@
             <artifactId>eclipselink</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-vfs</artifactId>
+            <version>3.1.0.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
