--- a/paquescolar-web/pom.xml
+++ b/paquescolar-web/pom.xml
@@ -15,7 +15,6 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>paquescolar-ejb</artifactId>
             <version>2.1</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -27,13 +26,11 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>7.0</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>paradise-theme</groupId>
             <artifactId>paradise-theme</artifactId>
             <version>2.0.0</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.faces</groupId>
@@ -57,43 +54,36 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>3.16</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>utilitario</artifactId>
             <version>1.2.1</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
             <version>5.0.0</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
             <version>2.1.7</version>
-            <scope>provided</scope>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>net.bull.javamelody</groupId>
             <artifactId>javamelody-core</artifactId>
-            <version>1.54.0</version>
-            <scope>provided</scope>
-        </dependency>
+            <version>1.79.0</version>
+        </dependency-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
