--- a/paquescolar-web/src/main/webapp/WEB-INF/web.xml
+++ b/paquescolar-web/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,22 @@
         <filter-name>FilterWeb</filter-name>
         <url-pattern>/app/*</url-pattern>
     </filter-mapping>
+    
+    <filter>
+        <filter-name>javamelody</filter-name>
+        <filter-class>net.bull.javamelody.MonitoringFilter</filter-class>
+        <async-supported>true</async-supported>
+    </filter>
+    <filter-mapping>
+        <filter-name>javamelody</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>ASYNC</dispatcher>
+    </filter-mapping>
+    <listener>
+        <listener-class>net.bull.javamelody.SessionListener</listener-class>
+    </listener>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
