--- a/boleta-web/src/main/resources/emails.properties
+++ b/boleta-web/src/main/resources/emails.properties
@@ -1,5 +1,5 @@
 A220210=oscar.martinez2@mined.edu.sv
-A223626=oscar.martinez2@mined.edu.sv
+A223626=miguel.sanchez@mined.gob.sv
 A085708=oscar.martinez2@mined.edu.sv
 A150556=oscar.martinez2@mined.edu.sv
 0201773=oscar.martinez2@mined.edu.sv
