--- a/boleta-web/src/main/resources/config.properties
+++ b/boleta-web/src/main/resources/config.properties
@@ -12,8 +12,8 @@ mail.smtp.port=587
 mail.from=boleta@mined.edu.sv
 mail.user=boleta@mined.edu.sv
 mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+#mail.smtp.starttls.enable=true
 
-mail.user.pass=dtaEUTH8+Z6JJSpQl9fUJg==
+mail.user.pass=Var68602
 mail.subject=Boleta
 mail.message=Env\u00edo de boleta de pago.
