Boleta pre produccion

--- a/boleta-ejb/src/main/resources/parametros.properties
+++ b/boleta-ejb/src/main/resources/parametros.properties
@@ -1,1 +1,5 @@
-path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
+#windows
+#path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
+
+#linux
+path_archivo=//opt//soporte//boleta_archivos
