pre envio de boletas en produccion

--- a/boleta-ejb/src/main/resources/emails0212.properties
+++ b/boleta-ejb/src/main/resources/emails0212.properties
@@ -1,3 +1,11 @@
+0701064=manuel.antonio.flores.flores@docentes.mined.edu.sv
+A022489=jorge.bonilla.zavala@admin.mined.edu.sv
+A051594=melqui.sirek.diaz@admin.mined.edu.sv
+A072416=yasmin.franco.bermudez@admin.mined.edu.sv
+A085752=maria.angelica.garay@admin.mined.edu.sv
+2104622=carlos.alberto.ramirez.ramirez@admin.mined.edu.sv
+A223605=santos.abercio.sorto@admin.mined.edu.sv
+1513203=wendy.martinez.rivas@docentes.mined.edu.sv
 0011211=rafael.antonio.alfaro@docentes.mined.edu.sv
 0011362=maria.emilia.aleman@docentes.mined.edu.sv
 0011629=bernardino.geovanni.arrue@docentes.mined.edu.sv
@@ -6271,7 +6279,7 @@
 0216382=angela.yanira.gonzalez@docentes.mined.edu.sv
 0220591=jose.armando.soto@docentes.mined.edu.sv
 0220636=ana.mercedes.sierra@docentes.mined.edu.sv
-0220639=leonel.sanchez.batres@docentes.mined.edu.sv‎
+0220639=leonel.sanchez.batres@docentes.mined.edu.sv\u00e2\u0080\u008e
 0230203=roxana.elizabeth.trujillo@docentes.mined.edu.sv
 0250003=francisco.javier.valle@docentes.mined.edu.sv
 0250163=ana.valdez.garcia@docentes.mined.edu.sv
@@ -46982,7 +46990,7 @@ A150534=maria.delcarmen.martinez@admin.mined.edu.sv
 A150571=blanca.julia.melgar@admin.mined.edu.sv
 A150572=edith.delrosario.morataya@admin.mined.edu.sv
 A150587=jorge.alberto.menjivar@admin.mined.edu.sv
-A150598= jose.timoteo.morales@admin.mined.edu.sv
+A150598=\u00c2\u00a0jose.timoteo.morales@admin.mined.edu.sv
 A150701=orlando.melara.montesinos@admin.mined.edu.sv
 A150790=carmen.melendez.deromero@admin.mined.edu.sv
 A150792=juana.dejesus.mira@admin.mined.edu.sv
