funcional - continuar donde dio error

--- a/boleta-ejb/src/main/resources/parametros.properties
+++ b/boleta-ejb/src/main/resources/parametros.properties
@@ -1,7 +1,7 @@
 #windows
-#path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
+path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
 
 #linux
-path_archivo=//opt//soporte//boleta_archivos
+#path_archivo=//opt//soporte//boleta_archivos
 
 mail.message=Env\u00edo de boleta de pago.
