--- a/boleta-ejb/src/main/resources/parametros.properties
+++ b/boleta-ejb/src/main/resources/parametros.properties
@@ -4,4 +4,4 @@ path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
 #linux
 #path_archivo=//opt//soporte//boleta_archivos
 
-mail.message=Env\u00edo de boleta de pago.
+mail.message=Env\u00edo de boleta de pago.<br/><br/><b>Mensaje autom\u00e1tico, por favor no responder</b>
