--- a/boleta-ejb/pom.xml
+++ b/boleta-ejb/pom.xml
@@ -22,6 +22,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7.js1</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
