--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ hs_err_pid*
 /seguridad/boleta-web/target/
 /seguridad/target/
 /seguridad/utils/target/
+/boleta-ejb/target/
+/envioCorreo/target/
