--- a/boleta-ejb/src/main/resources/emails0212.properties
+++ b/boleta-ejb/src/main/resources/emails0212.properties
@@ -1,3 +1,6 @@
+2302080=eva.carmen.torres@docentes.mined.edu.sv
+2205938=yeni.carolina.soto@docentes.mined.edu.sv
+#1302477=carlos.carlos.antonio.lopez@docentes.mined.edu.sv
 0701064=manuel.antonio.flores.flores@docentes.mined.edu.sv
 A022489=jorge.bonilla.zavala@admin.mined.edu.sv
 A051594=melqui.sirek.diaz@admin.mined.edu.sv
