--- a/boleta-ejb/src/main/resources/parametros.properties
+++ b/boleta-ejb/src/main/resources/parametros.properties
@@ -1,7 +1,7 @@
 #windows
-path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
+#path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
 
 #linux
-#path_archivo=//opt//soporte//boleta_archivos
+path_archivo=//opt//soporte//boleta_archivos
 
-mail.message=Buen d\u00eda:<br/>Para descargar la(s) boleta(s) de pago, por favor dar click en el siguiente enlace.<br/><br/><span style='font-size:13px;'>{0}</span><br/><br/><b>Mensaje autom\u00e1tico, por favor no responder</b>
+mail.message=Buen d\u00eda:<br/>Para descargar la(s) boleta(s) de pago del mes de {0}, por favor dar click en el siguiente enlace.<br/><br/><span style='font-size:13px;'>{1}</span><br/><br/><b>Mensaje autom\u00e1tico, por favor no responder</b>
