--- a/boleta-ejb/src/main/resources/emails0212.properties
+++ b/boleta-ejb/src/main/resources/emails0212.properties
@@ -1,3 +1,4 @@
+1302744=carlos.carlos.antonio.lopez@docentes.mined.edu.sv
 2302080=eva.carmen.torres@docentes.mined.edu.sv
 2205938=yeni.carolina.soto@docentes.mined.edu.sv
 #1302477=carlos.carlos.antonio.lopez@docentes.mined.edu.sv
