--- a/boleta-web/pom.xml
+++ b/boleta-web/pom.xml
@@ -33,13 +33,13 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>boleta-ejb</artifactId>
+            <artifactId>seguridad-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>seguridad-api</artifactId>
-            <version>${project.version}</version>
+            <artifactId>boleta-ejb</artifactId>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
