--- a/boleta-ejb/src/main/resources/cuenta_office365.properties
+++ b/boleta-ejb/src/main/resources/cuenta_office365.properties
@@ -12,7 +12,7 @@ usuario_11=boletas11@admin.mined.edu.sv
 usuario_12=boletas12@admin.mined.edu.sv
 usuario_13=boletas13@admin.mined.edu.sv
 usuario_14=boletas14@admin.mined.edu.sv
-clave_01=A71hUPAn02.
+clave_01=A71huPa02..
 clave_02=Fot12752
 clave_03=Zav85071
 clave_04=Buw40019
