--- a/boleta-ejb/src/main/resources/emails0212.properties
+++ b/boleta-ejb/src/main/resources/emails0212.properties
@@ -45001,7 +45001,7 @@ A150534=maria.delcarmen.martinez@admin.mined.edu.sv
 A150571=blanca.julia.melgar@admin.mined.edu.sv
 A150572=edith.delrosario.morataya@admin.mined.edu.sv
 A150587=jorge.alberto.menjivar@admin.mined.edu.sv
-A150598=\u00c3\u201a\u00c2\u00a0jose.timoteo.morales@admin.mined.edu.sv
+A150598=jose.timoteo.morales@admin.mined.edu.sv
 A150701=orlando.melara.montesinos@admin.mined.edu.sv
 A150790=carmen.melendez.deromero@admin.mined.edu.sv
 A150792=juana.dejesus.mira@admin.mined.edu.sv
@@ -47457,3 +47457,34 @@ I120035=maria.elena.pineda@docentes.mined.edu.sv
 1515467=claudia.eunice.mendez@docentes.mined.edu.sv
 1918733=douglas.antonio.pineda@docentes.mined.edu.sv
 A253152=ana.elizabeth.vasquez@admin.mined.edu.sv
+A011368=mirian.leticia.alvarez@admin.mined.edu.sv
+0102583=aurora.amaya.alvarez@admin.mined.edu.sv
+0202064=marina.dolores.bran@admin.mined.edu.sv
+A031542=patricia.yamileth.canizales@admin.mined.edu.sv
+A036763=moises.jonatan.castillo@admin.mined.edu.sv
+A036843=manuel.enrique.coreas@admin.mined.edu.sv
+A050285=nora.isabel.dimajo@admin.mined.edu.sv
+A070451=adolfo.alberto.franco@admin.mined.edu.sv
+A081107=norma.lilian.gonzalez@admin.mined.edu.sv
+A080219=roy.antonio.guzman@admin.mined.edu.sv
+A092944=angel.antonio.hernandez@admin.mined.edu.sv
+A092888=claudia.patricia.hernandez@admin.mined.edu.sv
+1000282=samuel.iglesias.gamez@admin.mined.edu.sv
+1101007=carmen.marina.jovel@admin.mined.edu.sv
+1516157=ascari.jubal.manzanares@admin.mined.edu.sv
+A159459=jose.armando.martinez@admin.mined.edu.sv
+A159463=jose.mauricio.molina@admin.mined.edu.sv
+2106010=oscar.mauricio.reyes@admin.mined.edu.sv
+A216718=marbella.eulalia.reyes@admin.mined.edu.sv
+2105244=margarita.maribel.ruiz@admin.mined.edu.sv
+A223582=alma.guadalupe.santos@admin.mined.edu.sv
+2203173=patricia.dolores.sosa@admin.mined.edu.sv
+2302125=jose.arnoldo.torres@admin.mined.edu.sv
+A240091=julio.ulises.umanzor@admin.mined.edu.sv
+A250495=ezequie.vasquez.martinez@admin.mined.edu.sv
+A250235=jose.hermoges.vasquez@admin.mined.edu.sv
+0701409=jose.nelson.funes@admin.mined.edu.sv
+A211358=manuel.jesus.reyes@admin.mined.edu.sv
+0803775=tadeo.gonzalez.moreno@admin.mined.edu.sv
+A253043=delmira.vega@admin.mined.edu.sv
+1305461=delis.osmin.lazo@docentes.mined.edu.sv
