--- a/boleta-ejb/pom.xml
+++ b/boleta-ejb/pom.xml
@@ -18,8 +18,13 @@
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.17</version>
+            <version>2.0.18</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>fontbox</artifactId>
+            <version>2.0.18</version>
         </dependency>
         <dependency>
             <groupId>com.lowagie</groupId>
@@ -42,6 +47,12 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>utils</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
