--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -58,3 +58,8 @@ pagoprov.email.tablaDetalle.detalle =<tr><td style='text-align:center;'>{0}</td>
 pagoprov.email.tablaDetalle.footer  =<tr><td style='text-align:right;' colspan='4'>Total a pagar ($ USD)</td><td style='text-align:right;'>{0}</td></tr>
 pagoprov.email.tablaDetalle.fin     =</table><br/><br/>
 pagoprov.email.finNotificacion      =<span style='font-size:13px;'>Fecha: {0},<br/><br/>Atte.<br/><br/>Pagadur\u00eda Auxiliar.<br/>Direcci\u00f3n Departamental de Educaci\u00f3n de {1}.</span><br/><br/><hr/><span style='font-size:11px;'>Este es un mensaje autom\u00e1tico. No responda al remitente.<br/>Ministerio de Educaci\u00f3n.</span>
+
+
+#Validacion de usuario empresa
+prov.email.titulo=MINEDUCYT - PPE - Activaci\u00f3n de usuario
+prov.email.mensaje=Buen d\u00eda,<br/>Para la activaci\u00f3n de su usuario es necesario dar clic en el siguiente enlace <a href="http://aplicaciones.mined.gob.sv/paquescolar-web/crearPassword.xhtml?codigo={1}">clic ac\u00e1</a></span><br/><br/><span style='font-size:12px;color: red;'><b>Este es un mensaje autom\u00e1tico. No responda al remitente</b>.<br/><br/><b>Ministerio de Educaci\u00f3n, Ciencia y Tecnolog\u00eda</b>.</span>
