--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -62,4 +62,4 @@ pagoprov.email.finNotificacion      =<span style='font-size:13px;'>Fecha: {0},<b
 
 #Validacion de usuario empresa
 prov.email.titulo=MINEDUCYT - PPE - Activaci\u00f3n de usuario
-prov.email.mensaje=Buen d\u00eda,<br/>Para la activaci\u00f3n de su usuario es necesario dar clic en el siguiente enlace <a href="http://aplicaciones.mined.gob.sv/paquescolar-web/crearPassword.xhtml?codigo={1}">clic ac\u00e1</a></span><br/><br/><span style='font-size:12px;color: red;'><b>Este es un mensaje autom\u00e1tico. No responda al remitente</b>.<br/><br/><b>Ministerio de Educaci\u00f3n, Ciencia y Tecnolog\u00eda</b>.</span>
+prov.email.mensaje=Buen d\u00eda,<br/>Para la activaci\u00f3n de su usuario es necesario dar clic en el siguiente enlace <a href="http://aplicaciones.mined.gob.sv/paquescolar-web/activarPassword.mined?codigo={0}">clic ac\u00e1</a></span><br/><br/><span style='font-size:12px;color: red;'><b>Este es un mensaje autom\u00e1tico. No responda al remitente</b>.<br/><br/><b>Ministerio de Educaci\u00f3n, Ciencia y Tecnolog\u00eda</b>.</span>
