--- a/paquete-backend/pom.xml
+++ b/paquete-backend/pom.xml
@@ -67,6 +67,16 @@
             <version>0.11.2</version>
             <scope>runtime</scope>
         </dependency>
+        <!--dependency>
+            <groupId>org.bitbucket.b_c</groupId>
+            <artifactId>jose4j</artifactId>
+            <version>0.6.5</version>
+        </dependency-->
+        <dependency>
+            <groupId>org.apache.pulsar</groupId>
+            <artifactId>pulsar-broker-common</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
