--- a/paquescolar-ejb/pom.xml
+++ b/paquescolar-ejb/pom.xml
@@ -26,6 +26,12 @@
             <version>2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.18</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>6.0</version>
