Mejorar proceso de envio

--- a/boleta-api/src/main/resources/parametros.properties
+++ b/boleta-api/src/main/resources/parametros.properties
@@ -1,5 +1,5 @@
 #windows
-#path_archivo=C:\\Users\\DesarrolloPc\\boleta_archivos
+#path_archivo=C:\\Users\\MISanchez\\boleta_archivos
 
 #linux
 path_archivo=//opt//soporte//boleta_archivos
