--- a/envio-web/src/main/resources/parametros.properties
+++ b/envio-web/src/main/resources/parametros.properties
@@ -1,5 +1,5 @@
 #windows
-path_archivo=C:\\Users\\MISanchez\\app_web\\envio_masivo
+#path_archivo=C:\\Users\\MISanchez\\app_web\\envio_masivo
 
 #linux
-#path_archivo=//opt//soporte//envio_masivo
+path_archivo=//opt//soporte//envio_masivo
