--- a/paquescolar-web/src/main/webapp/WEB-INF/web.xml
+++ b/paquescolar-web/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
         <url-pattern>/app/*</url-pattern>
     </filter-mapping>
     
-    <filter>
+    <!--filter>
         <filter-name>javamelody</filter-name>
         <filter-class>net.bull.javamelody.MonitoringFilter</filter-class>
         <async-supported>true</async-supported>
@@ -49,7 +49,7 @@
     </filter-mapping>
     <listener>
         <listener-class>net.bull.javamelody.SessionListener</listener-class>
-    </listener>
+    </listener-->
     
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
