eliminacion de reportes del proyecto web

--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -1,7 +1,7 @@
 #PATH
 path_images =/imagenes/PaqueteEscolar/
-#path_reportes=/opt/soporte/paquete/archivos/reportes/
-path_reportes=C:\\Users\\MISanchez\\Documents\\NetBeansProjects\\paquete\\paquescolar-rpt\\src\\main\\java\\
+path_reportes=/opt/soporte/paquete/archivos/reportes/
+#path_reportes=C:\\Users\\MISanchez\\Documents\\NetBeansProjects\\paquete\\paquescolar-rpt\\src\\main\\java\\
 
 
 #Parametros extra de contratos
