--- a/cooperacion-web/pom.xml
+++ b/cooperacion-web/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>paradise-theme</artifactId>
             <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
         
          
          
