--- a/cooperacion-web/src/main/webapp/WEB-INF/web.xml
+++ b/cooperacion-web/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,14 @@
         <param-value>commons</param-value>
     </context-param>
     
+    
+    <error-page>
+        <error-code>404</error-code>
+        <location>/app/notfound.mined</location> 
+    </error-page>
+
+    
+    
     <listener>
         <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
     </listener>
