--- a/cooperacion-web/src/main/webapp/WEB-INF/web.xml
+++ b/cooperacion-web/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,10 @@
         <param-value>commons</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+        <param-value>true</param-value>
+    </context-param>
     
     <error-page>
         <error-code>404</error-code>
