--- a/cooperacion-web/src/main/resources/bundle.properties
+++ b/cooperacion-web/src/main/resources/bundle.properties
@@ -16,7 +16,7 @@ correo.respuestaSolicitudCapacitacion.mensaje=San Salvador, fecha {0}<br/><br/>N
 correo.respuestaSolicitudCapacitacion.mensaje.tablaDetalle.header  =<table border='1' style='border-collapse: collapse; padding: 0 10px;font-size: 12px;' cellpadding='10'><tr><th>D\u00eda</th><th>Hora inicio</th><th>Hora fin</th><th>Lugar</th></tr>
 correo.respuestaSolicitudCapacitacion.mensaje.tablaDetalle.detalle =<tr><td>{0}</td><td>{1}</td><td>{2}</td><td>{3}</td></tr>
 correo.respuestaSolicitudCapacitacion.mensaje.tablaDetalle.fin     =</table><br/><br/>
-correo.respuestaSolicitudCapacitacion.mensaje.fin=<br/><br/>Atentamente,<br/><br/>Instituto Nacional de Formaci\u00f3n Docente<br/>INFORD
+correo.respuestaSolicitudCapacitacion.mensaje.fin=<br/><br/>Atentamente,<br/><br/>Instituto Nacional de Formaci\u00f3n Docente<br/>INFOD
 
 
 correo.notificacionDeCapacitacion.mensaje=San Salvador, fecha {0}<br/><br/>Se ha creado una intenci\u00f3n de Cooperacion para el {1}, c\u00f3digo de infraestructura {2}, por favor, revisar por medio del siguiente enlace <a href="http://localhost:8080/cooperacion-web/aprobarCapacitacion.mined?codigo={3}">clic ac\u00e1</a><br/><br/>Atentamente,<br/><br/>Direcci\u00f3n de Infraestructura
