--- a/paquescolar-web/src/main/resources/Bundle.properties
+++ b/paquescolar-web/src/main/resources/Bundle.properties
@@ -1,7 +1,7 @@
 #PATH
 path_images =/imagenes/PaqueteEscolar/
 path_reportes_linux=/opt/soporte/paquete/archivos/reportes/
-path_reportes_win=C:\\Users\\MISanchez\\Documents\\NetBeansProjects\\paquete\\paquescolar-rpt\\src\\main\\java\\
+path_reportes_win=C:\\Users\\G3\\Documents\\NetBeansProjects\\paquete\\paquescolar-rpt\\src\\main\\java\\
 
 
 #Parametros extra de contratos
